# fishiot_app

./: .gitignore  CMakeLists.txt  Kconfig  PROVISION rules.txt  prj.conf  sample.yaml  server_certificate.crt
.github/workflows/: main.yml
boards/arm/iof_nrf9160_ns_new/: Kconfig.board  Kconfig.defconfig  board.cmake  iof_nrf9160_ns_new-pinctrl.dtsi  iof_nrf9160_ns_new.dts  iof_nrf9160_ns_new.yaml  iof_nrf9160_ns_new_defconfig
drivers/include/: gnss_connection.h  mqtt_connection.h  rs485.h  rtc.h
drivers/src/: gnss_connection.c  mqtt_connection.c  rs485.c  rtc.c
include/: adc.h  certificate.h  gnss_connection.h  leds.h  mqtt_connection.h  rs485.h  rtc.h  structs.h
src/: adc.c  gnss_connection.c  leds.c  main.c  mqtt_connection.c  mqtt_connection.h  rs485.c  rtc.c
tasks/: mqtt_task.c  mqtt_task.h
tasks/GNSS_TASK/: gnss_task.c  gnss_task.h
tasks/MQTT_TASK/: mqtt_task.c  mqtt_task.h
tasks/RS485_TASK/: rs485_task.c  rs485_task.h
tasks/RTC_TASK/: rtc_task.c  rtc_task.h
tasks/TBR_SYNC_TASK/: tbr_sync_task.c  tbr_sync_task.h
